--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset=utf-8>
     <link rel=stylesheet href=css/styles.css>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.js"></script>
+    <script type="text/javascript" src="js/Player.js"></script>
     <script type="text/javascript" src="js/Scene_Test.js"></script>
     <script type="text/javascript" src="js/Scene_Main.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
